# FinancePlanner

./: .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
calculator/: models.py  services.py  urls.py  validators.py  views.py
calculator/templates/calculator/: base.html  index.html
config/: settings.py  urls.py
data/: uk_tax_thresholds.json
specs/001-finance-sub-apps/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-finance-sub-apps/checklists/: requirements.md
specs/001-finance-sub-apps/contracts/: finance-sub-apps-api.json
specs/001-loan-payoff-calc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-loan-payoff-calc/checklists/: requirements.md
specs/001-loan-payoff-calc/contracts/: calculator-api.json
specs/001-uk-income-tax-tab/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-uk-income-tax-tab/checklists/: requirements.md
specs/001-uk-income-tax-tab/contracts/: uk-income-tax-api.json
static/css/: calculator.css
static/js/: calculator.js
tests/: __init__.py
tests/performance/: test_calculation_speed.py
tests/unit/calculator/: test_models.py  test_services.py  test_validators.py  test_views.py
